--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             <li><b>AV / IT Coordination</b>: conference rooms, displays, deployments, vendor/IT liaison work</li>
             <li><b>Projects &amp; Transitions</b>: moves, consolidations, integrations, cleanups, post-change stabilization</li>
           </ul>
+		  
+		  <div class="kicker">Background</div>
+		    <p class="availability">
+            I bring long-term, hands-on experience supporting growing organizations across workplace, operations, and executive environments. My work has focused on stabilizing day-to-day operations, improving reliability, and helping leaders navigate periods of change with clear structure and follow-through. I’m most effective in environments where judgment, discretion, and practical execution matter as much as strategy.
+          </p>
 
           <div class="caption">Imagery used as neutral, illustrative visuals (not client work).</div>
         </div>
